--- a/dwh/TODO.txt
+++ b/dwh/TODO.txt
@@ -2,3 +2,9 @@ Remove the following files from jboss-configuration.zip:
 - standalone*.xml 
 - logging.properties
 - application-*.properties
+
+Deployment to Wildfly via CLI:
+/opt/wildfly-9.0.2.Final/bin/jboss-cli.sh --controller=localhost:9990 --connect
+--command="deploy ... --force"
+
+Test wildfly 10.0.0
